crates/lintel/tests/snapshots/e2e__malformed_json.snap
---
source: crates/lintel/tests/e2e.rs
assertion_line: 46
expression: text
---
error: expected `,` or `}` at line 5 column 5
Checked 1 files in [TIME]. 1 error(s) found.
exit code: 1
