crates/lintel/tests/snapshots/e2e__malformed_package_json.snap
---
source: crates/lintel/tests/e2e.rs
expression: text
---
error: ./package.json: Expected string for object property on line 3 column 3
Checked 0 files in [TIME]. 1 error(s) found.
exit code: 1
