crates/lintel/tests/snapshots/e2e__malformed_trailing_comma.snap
---
source: crates/lintel/tests/e2e.rs
expression: text
---
Checked 0 files in [TIME]. No errors.
exit code: 0
