crates/lintel/tests/snapshots/e2e__malformed_yaml.snap
---
source: crates/lintel/tests/e2e.rs
expression: text
---
error: ./.github/workflows/ci.yml: did not find expected ',' or ']' at line 4 column 5, while parsing a flow sequence at line 2 column 5
Checked 0 files in [TIME]. 1 error(s) found.
exit code: 1
